@@ -34,6 +34,7 @@ const LMS_MAX_NON_SCROLLER_ITEMS = 100;
 const LMS_SCROLLER_LIST_BUFFER = 500; // px
 const LMS_SCROLLER_GRID_BUFFER = 750; // px
 const LMS_MAX_PLAYERS = 100;
+const MAX_PLAYLIST_EDIT_SIZE = 250;
 const LMS_IMAGE_SZ = IS_HIGH_DPI ? 600 : 300;
 const LMS_CURRENT_IMAGE_SZ = IS_HIGH_DPI ? 2048 : 1024;
 const LMS_IMAGE_SIZE = "_"+LMS_IMAGE_SZ+"x"+LMS_IMAGE_SZ+"_f";
