@@ -4,6 +4,7 @@
 2. Fix custom favourite icons being replaced with default cover.
 3. Incrementally load playlist track listing, use LMS's "Items Per Page"
    setting to control batch size.
+4. Only allow editing (in 'Browse' view) of playlists of 250 (or less) tracks.
 
 3.4.3
 -----
